2005-11-03  Keltus <keltus@users.sourceforge.net>
	* irclib.py (numeric_events): Renamed numeric code 332 from topic
	to currenttopic (the message when "/topic <chan>" is sent), so it
	doesn't collide with TOPIC (the message when the topic is set).

2005-08-27  Keltus <keltus@users.sourceforge.net>
	* irclib.py (ServerConnection.disconnect): Fixed infinitely
	recursive calls when disconnecting with a failed connection. Bug
	reported by Erik Max Francis.

2005-08-18  Keltus <keltus@users.sourceforge.net>
	* irclib.py: Made ServerConnection.disconnect more consistant and
	changed some functions to use it instead of quit. Previously,
	disconnect would ignore the quit message, but now it sends a quit
	message and disconnect. Suggestion by Erik Max Francis.
	* ircbot.py: Changed to use ServerConnection.disconnect instead of
	ServerConnection.quit as well.

2005-05-28  Keltus <keltus@users.sourceforge.net>
	* irclib.py (ServerConnection.process_data): Fixed quit arguments
	to return a list rather than a list of a list. Patch from peter.

2005-05-18  Keltus <keltus@users.sourceforge.net>
	* Released version 0.4.5.

	* irclib.py (ServerConnection.__init__): Added self.socket = None
	to be able to process events when ServerConnection is not
	connected to a socket. Patch from alst.

	* irclib.py (VERSION):
	* python-irclib.spec.in:
	Preparations for version 0.4.5.

2005-04-26  Keltus <keltus@users.sourceforge.net>
	* irclib.py (IRC.__doc__): Corrected server.process_forever() to
	irc.process_forever(). Suggestion by olecom.

2005-04-17  Keltus <keltus@users.sourceforge.net>
	* irclib.py (ServerConnection.process_data): Moved event
	translation code.
	* irclib.py (ServerConnection): Reverted the 2005-01-28 change
	because it breaks jump_server().
	* irclib.py: minor comment changes

2005-04-03  Keltus <keltus@users.sourceforge.net>
	* irclib.py (protocol_events): Added "pong" and "invite" events.
	Patch from Adam Mikuta.